# Trilha_Python

./: .gitignore  AA-03.ipynb  PI-002.ipynb  PI-003.ipynb  PI-004.ipynb  PI-005.ipynb  PI-007.ipynb  PI-008.ipynb  PI-009.ipynb  PI-P007.ipynb  README.md  Tutorial.md  requirements.txt
DataFruta_V1/: AnaliseDados.py  ListaDatas.py  ListaIdades.py  ListaNomes.py  ListaNotas.py  ListaSalarios.py  NotasTurma.py  __init__.py  __main__.py
PI-001/: tutorial.md
PI-001/datafruta/: ListaIdades.py  ListaNomes.py  __main__.py
PI-002/: idadesAleatorias.py  salariosAleatorios.py
avalicoes/: AA-02.ipynb
dadosEquipes/: Resitic - Equipe1.csv  Resitic - Equipe2.csv  Resitic - Equipe3.csv
datafruta/: AnaliseDados.py  Data.py  ListaDatas.py  ListaIdades.py  ListaNomes.py  ListaNotas.py  ListaSalarios.py  __init__.py  __main__.py
datasets/: estacao_Salvador_2013.CSV
datasets/tratados/: estacao_Salvador_2003.pkl  estacao_Salvador_2013.pkl  estacao_Salvador_2023.pkl
dev-Everaldina/: AA-01.ipynb  PI-007.ipynb  PI-008.ipynb  PI-010.ipynb  gerar_alunos_pd.py  teste_TKINT.py
dev-JoaoManoel/: IP-P010.ipynb  alunos.csv  buscaML.py  estacao_ssa.py  exemplo3.py  geraDF.py  students.csv  tratamento_PI-008.py
documentacao/: requirements.txt  tutorialLinux_ambienteVirtualPython.md  tutorialWindows.md
documentação/: tutorial.md
estacaoMetereologica/: pyproject.toml
estacaoMetereologica/estacaometereologica/: __main__.py  interface.py  plot.py  search.py
pandasTest/: p005.py
pandasUtil/: p005.py
resitic/: Interface.py  Residencia.py  Residente.py  Trilha.py  __init__.py  __main__.py  requirements.txt
resitic18/: README.md  pyproject.toml
resitic18/resitic18/: Interface.py  Residencia.py  Residente.py  Trilha.py  __main__.py
revisoes/: revisao04.py
