[tool.poetry]
name = "estacaometereologica"
version = "0.1.9"
description = ""
authors = ["Everaldina G. Barbosa <everaldinag@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.3"
pandas = "^2.2.0"
requests = "^2.31.0"
bs4 = "^0.0.2"

[tool.poetry.scripts]
estacao = "estacaometereologica.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
