[tool.poetry]
name = "resitic18"
version = "1.0.0"
description = ""
authors = ["João Manoel <jmaoliveira.cic@uesc.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.3"
pandas = "^2.2.0"
customtkinter = "^5.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
resitic = "resitic18.__main__:main"